[gd_scene load_steps=8 format=3 uid="uid://dplnr5q0eeebh"]

[ext_resource type="Theme" uid="uid://d2lh3hpldd764" path="res://Assets/theme.tres" id="1_s4h8k"]
[ext_resource type="Script" path="res://Scenes/Ui/TimerPanel.gd" id="2_ah4lv"]
[ext_resource type="Script" path="res://Scenes/Ui/Ui.gd" id="2_oqoan"]
[ext_resource type="Script" path="res://Scenes/Ui/EnemyHealthPanel.gd" id="4_7tmcb"]
[ext_resource type="PackedScene" uid="uid://c6i0ksc3jkqd2" path="res://Scenes/units/player_unit/fire_unit.tscn" id="4_c5rtr"]
[ext_resource type="PackedScene" uid="uid://caext43hae4ho" path="res://Scenes/Ui/unit_preview.tscn" id="4_pivm6"]
[ext_resource type="Texture2D" uid="uid://cj0ir602q6xec" path="res://Assets/Textures/Ui/Hud/sandwatch.png" id="5_imrn5"]

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s4h8k")
script = ExtResource("2_oqoan")
fire_scene = ExtResource("4_c5rtr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s4h8k")

[node name="Label3" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 100
text = "MiniGame"

[node name="TimerPanel" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource("2_ah4lv")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/TimerPanel"]
layout_mode = 2

[node name="ProgressBar" type="TextureProgressBar" parent="MarginContainer/TimerPanel/CenterContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 0.7
fill_mode = 4
texture_progress = ExtResource("5_imrn5")

[node name="UnitPreviewPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/UnitPreviewPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/UnitPreviewPanel/MarginContainer"]
layout_mode = 2

[node name="UnitPreview1" parent="MarginContainer/UnitPreviewPanel/MarginContainer/HBoxContainer" instance=ExtResource("4_pivm6")]
layout_mode = 2

[node name="UnitPreview2" parent="MarginContainer/UnitPreviewPanel/MarginContainer/HBoxContainer" instance=ExtResource("4_pivm6")]
layout_mode = 2

[node name="UnitPreview3" parent="MarginContainer/UnitPreviewPanel/MarginContainer/HBoxContainer" instance=ExtResource("4_pivm6")]
layout_mode = 2

[node name="EnemyHealthPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("4_7tmcb")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/EnemyHealthPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/EnemyHealthPanel/HBoxContainer"]
layout_mode = 2
text = "Enemy Health"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/EnemyHealthPanel/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="PlayerHealthPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
